--- a/WinFormsApp/App.config
+++ b/WinFormsApp/App.config
@@ -8,7 +8,7 @@
 
 	<connectionStrings>
 		<add name="LibraryDB"
-		  connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Вероника\OneDrive\Рабочий стол\AIS_LABA_1\DataAccessLayer\LibraryDB.mdf;Integrated Security=True;Connect Timeout=30"
+		  connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\lonit\source\repos\GirliesHub\AIS_1lab\DataAccessLayer\LibraryDB.mdf;Integrated Security=True;Connect Timeout=30"
 		  providerName="System.Data.SqlClient" />
 	</connectionStrings>
 
